--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -5,7 +5,7 @@
    "id": "b6614a25-6ccd-4cc4-a009-215322b37e00",
    "metadata": {},
    "source": [
-    "# Title (We need to rename this, is it supposed to be what we are investigating or just called project proposal?)"
+    "# Predicting Knowledge Level of Students in Electrical DC Machines"
    ]
   },
   {
@@ -28,13 +28,17 @@
    "cell_type": "markdown",
    "id": "59369fe0-5b36-4459-8516-06b83bfbe79a",
    "metadata": {},
-   "source": []
+   "source": [
+    "Can we predict the knowledge level of students in Electrical DC Machines based on their study habits and performance on related exams?"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "14d77a16-4da3-4c03-b8d2-f27fc83b3efe",
    "metadata": {},
-   "source": []
+   "source": [
+    "The dataset will be obtained from the UCI Machine Learning Repository titled \"User knowledge Modelling Data Set. This dataset contains information on students knowledge status about Electrical DC Machines, including their study time for goal object materials (STG), degree of repetition number of user for goal object materials (SCG), degree of study time of user for related objects with goal object (STR), exam performance of user for related objects with goal object (LPR), exam performance of user for goal objects (PEG), and knowledge level of the user (UNS). The UNS column is the target variable, with four possible values: Very Low, Low, Middle, and High.\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,25 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "5c7ee6c2-ee1f-46ec-b502-42be636fbb2c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error: `path` does not exist: ‘https://archive.ics.uci.edu/ml/machine-learning-databases/00257/Data_User_Modeling_Dataset_Hamdi%20Tolga%20KAHRAMAN.xls’\n",
-     "output_type": "error",
-     "traceback": [
-      "Error: `path` does not exist: ‘https://archive.ics.uci.edu/ml/machine-learning-databases/00257/Data_User_Modeling_Dataset_Hamdi%20Tolga%20KAHRAMAN.xls’\nTraceback:\n",
-      "1. read_excel(\"https://archive.ics.uci.edu/ml/machine-learning-databases/00257/Data_User_Modeling_Dataset_Hamdi%20Tolga%20KAHRAMAN.xls\")",
-      "2. check_file(path)",
-      "3. stop(\"`path` does not exist: \", sQuote(path), call. = FALSE)"
-     ]
-    }
-   ],
-   "source": [
-    "data <- read_excel(\"https://archive.ics.uci.edu/ml/machine-learning-databases/00257/Data_User_Modeling_Dataset_Hamdi%20Tolga%20KAHRAMAN.xls\")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
