Manjot turned data into tidy format

--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "We want to answer the following question:\n",
     "\n",
-    "**Can we predict the knowledge level of students in Electrical DC Machines based on their study habits and performance on related exams?**"
+    "**Can we predict the knowledge level of students in Electrical DC Machines based on their study habits?**"
    ]
   },
   {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "5c7ee6c2-ee1f-46ec-b502-42be636fbb2c",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,9 @@
    "cell_type": "markdown",
    "id": "7820ca8e-e80e-47a1-97b6-3d33603583e5",
    "metadata": {},
-   "source": []
+   "source": [
+    "We will conduct our data analysis by investigating the following columns: STG, SCG, and STR, these are all about study habits and their meanings were discussed above. We will be trying to predict the UNS."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -283,26 +285,15 @@
    "execution_count": null,
    "id": "ec8d34b0-1545-4b53-b468-fa090c8909fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in file(filename, \"r\", encoding = encoding):\n",
-      "“cannot open file 'cleanup.R': No such file or directory”\n"
-     ]
-    },
-    {
-     "ename": "ERROR",
-     "evalue": "Error in file(filename, \"r\", encoding = encoding): cannot open the connection\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in file(filename, \"r\", encoding = encoding): cannot open the connection\nTraceback:\n",
-      "1. source(\"cleanup.R\")",
-      "2. file(filename, \"r\", encoding = encoding)"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af35a327-a7bb-486a-a2be-4e4682441bd3",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
