Updated findings and ran all cells

--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "648ca527-f2fd-4a0e-8a93-1ff515c723d2",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "75c60048-f107-47bf-ad99-2ee43b8a44b8",
    "metadata": {},
    "outputs": [
@@ -870,7 +870,7 @@
    "id": "7820ca8e-e80e-47a1-97b6-3d33603583e5",
    "metadata": {},
    "source": [
-    "We will conduct our data analysis by investigating the following columns: we will be using SCG, STG, STR, and PEG (meanings were discussed above) since these show a relationship between them and UNS, specifically that the higher average values often resulted in high level of knowledge. \n",
+    "We will conduct our data analysis by investigating the following columns: we will be using SCG, STG, STR, and PEG (meanings were discussed above) since these show a relationship between them and UNS, specifically that the higher average values often resulted in high level of knowledge (shown in visualzation above). \n",
     "\n",
     "We will use the classification by the k-nearest neighbhor method, evaluating and the tuning the classifier in order to predict UNS based off of our 4 predictor columns.\n",
     "\n",
@@ -910,7 +910,7 @@
    "id": "488c0a7e-3efe-448d-a733-a93dcacfd50c",
    "metadata": {},
    "source": [
-    "This passage discusses the potential benefits of analyzing both study time patterns as well as exam performance to predict user knowledge level. The benefits include improved learning outcomes, customized learning experiences, better time management, effective resource allocation, and curriculum improvement. Overall, understanding how these factors relate to user knowledge level can have a positive impact on various aspects of education."
+    "Findings of this analysis could help to identify knowledge gaps among students in Electrical DC Machines. By analyzing the relationship between study habits, exam performance, and knowledge level, educators and trainers can identify which specific areas of Electrical DC Machines cause the most difficulties for students. With this information, they can develop targeted strategies to address these knowledge gaps and improve overall learning outcomes"
    ]
   },
   {
