--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -928,8 +928,18 @@
    "source": [
     "- How can educators use this information to design more effective learning strategies for individual students?\n",
     "\n",
-    "- Are there other factors, such as student motivation or learning style, that also play a significant role in predicting user knowledge level?"
+    "- Are there other factors, such as student motivation or learning style, that also play a significant role in predicting user knowledge level? \n",
+    "\n",
+    "- What can be the potential further effects of know"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e161f34d-638b-483a-b8d2-114471f54354",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
