--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -930,7 +930,7 @@
     "\n",
     "- Are there other factors, such as student motivation or learning style, that also play a significant role in predicting user knowledge level? \n",
     "\n",
-    "- What can be the potential further effects of know"
+    "- What can be the potential further effects of knowledge level"
    ]
   },
   {
