Minor Changes on Typos and Misspelling

--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -5,7 +5,8 @@
    "id": "b6614a25-6ccd-4cc4-a009-215322b37e00",
    "metadata": {},
    "source": [
-    "# Predicting Knowledge Level of Students in Electrical DC Machines"
+    "# Predicting Knowledge Level of Students in Electrical DC Machines\n",
+    "By: Carson, Manjot, Qiancheng, and Yichen"
    ]
   },
   {
@@ -21,7 +22,7 @@
    "id": "a6951cac-16ad-4656-b1a4-37a24ebafcb9",
    "metadata": {},
    "source": [
-    "This project aims to analyze students' knowledge of Electrical DC Machines, which are crucial components of many electrical systems. The dataset used is from a Ph.D. thesis available on the UCI Machine Learning Repository, titled \"User knowledge Modelling Data Set.\""
+    "This project aims to analyze students' knowledge of Electrical DC Machines, which are crucial components of many electrical systems. The dataset is from a Ph.D. thesis on the UCI Machine Learning Repository titled \"User knowledge Modelling Data Set.\""
    ]
   },
   {
@@ -39,17 +40,17 @@
    "id": "67ccfde3-deb4-4020-b564-c8a73fd4caa4",
    "metadata": {},
    "source": [
-    "The columns in the dataset (taken mostly from the dataset description) are:\n",
+    "The columns in the dataset (taken mainly from the dataset description) are:\n",
     "<ol>\n",
     "    <li> STG: The degree of study time for goal object materials </li>\n",
-    "    <li> SCG: The degree of repetition number of user for goal materials</li>\n",
-    "    <li> STR: The degree of study time of user for related objects with goal object</li>\n",
-    "    <li> LPR: The exam performance of user for related objects with goal object </li>\n",
-    "    <li> PEG: The exam performance of user for goal objects</li>\n",
-    "    <li> UNS: The knowledge level of user (with 4 values: Very Low, Low, Middle, and High)</li>\n",
+    "    <li> SCG: The degree of repetition number of users for goal materials</li>\n",
+    "    <li> STR: The degree of study time of users for related objects with goal object</li>\n",
+    "    <li> LPR: The exam performance of users for related objects with goal object </li>\n",
+    "    <li> PEG: The exam performance of users for goal objects</li>\n",
+    "    <li> UNS: The knowledge level of users (with 4 values: *Very Low*, *Low*, *Middle*, and *High*)</li>\n",
     "</ol>\n",
     "\n",
-    "Note: all numerical data is standardized and \"goal object\" refers to the subject of Electrical DC Machines while \"related objects with goal object\" refer to the other subjects or topics that are related but not exactly the \"goal object\""
+    "**Note**: all numerical data is standardized, and \"goal object\" refers to the subject of Electrical DC Machines while \"related objects with goal object\" refer to the other subjects or topics that are related but not exactly the \"goal object\"."
    ]
   },
   {
@@ -870,11 +871,11 @@
    "id": "7820ca8e-e80e-47a1-97b6-3d33603583e5",
    "metadata": {},
    "source": [
-    "We will conduct our data analysis by investigating the following columns: we will be using SCG, STG, STR, and PEG (meanings were discussed above) since these show a relationship between them and UNS, specifically that the higher average values often resulted in high level of knowledge (shown in visualzation above). \n",
+    "We will conduct our data analysis by investigating the following columns: we will be using SCG, STG, STR, and PEG (meanings were discussed above) since these show a relationship between them and UNS, specifically that the higher average values often resulted in a high level of knowledge (shown in the visualization above).  \n",
     "\n",
-    "We will use the classification by the k-nearest neighbhor method, evaluating and the tuning the classifier in order to predict UNS based off of our 4 predictor columns.\n",
+    "We will use the classification by the k-nearest neighbor method, evaluating and tuning the classifier to predict UNS based on our 4 predictor columns.\n",
     "\n",
-    "We will visualize the results is by plotting each of the study habits (SCG, STG, and STR) against PEG and then colouring by UNS to help identify patterns of UNS and where they occur with respect to these predictors."
+    "We will visualize the results by plotting each of the study habits (SCG, STG, and STR) against PEG and then coloring by UNS to help identify patterns of UNS and where they occur with respect to these predictors."
    ]
   },
   {
@@ -894,7 +895,7 @@
    "source": [
     "### What do you expect to find?\n",
     "\n",
-    "From the above plot and summary analysis we can loosely infer that knowledge level of the user is highly dependent on time alloted for study, repetitions of the material, study time for the particular topic, and exam performance for goal objects. We expect that user with study habits and exam performance on the main subject of study which were on the higher scale might fall on high knowledge level, while students lower values resulted in low levels of knowledge."
+    "From the above plot and summary analysis, we can loosely infer that the knowledge level of the user is highly dependent on the time allotted for the study, repetitions of the material, study time for the particular topic, and exam performance for goal objects. We expect that users with study habits and exam performance on the main subject of study, which was on the higher scale, might fall on a high knowledge level, while students' lower values resulted in low levels of knowledge."
    ]
   },
   {
@@ -910,7 +911,7 @@
    "id": "488c0a7e-3efe-448d-a733-a93dcacfd50c",
    "metadata": {},
    "source": [
-    "Findings of this analysis could help to identify knowledge gaps among students in Electrical DC Machines. By analyzing the relationship between study habits, exam performance, and knowledge level, educators and trainers can identify which specific areas of Electrical DC Machines cause the most difficulties for students. With this information, they can develop targeted strategies to address these knowledge gaps and improve overall learning outcomes"
+    "The findings of this analysis could help to identify knowledge gaps among students in Electrical DC Machines. By analyzing the relationship between study habits, exam performance, and knowledge level, educators and trainers can identify which specific areas of Electrical DC Machines cause the most difficulties for students. With this information, they can develop targeted strategies to address these knowledge gaps and improve overall learning outcomes."
    ]
   },
   {
@@ -930,7 +931,7 @@
     "\n",
     "- Are there other factors, such as student motivation or learning style, that also play a significant role in predicting user knowledge level? \n",
     "\n",
-    "- What can be the potential further effects of knowledge level"
+    "- What can be the potential further effects of knowledge level?"
    ]
   },
   {
