--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -98,7 +98,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Use suppressPackageStartupMessages() to eliminate package startup messages\n",
+      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
       "\n"
      ]
     }
@@ -933,14 +933,6 @@
     "\n",
     "- What can be the potential further effects of knowledge level?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e161f34d-638b-483a-b8d2-114471f54354",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
